<?xml version="1.0"?>
<package format="2">
  <name>hubero_interfaces</name>
  <version>0.0.0</version>
  <description>The hubero_interfaces package</description>

  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD-3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hubero_interfaces</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hubero_common</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
