<?xml version="1.0"?>
<!-- Based on https://github.com/ros-planning/navigation/blob/kinetic-devel/nav_core/package.xml -->
<package format="2">
  <name>hubero_interfaces</name>
  <version>0.5.0</version>
  <description>The hubero_interfaces package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hubero_interfaces</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hubero_common</build_depend>
  <exec_depend>hubero_common</exec_depend>

</package>
