<?xml version="1.0"?>
<!-- Based on https://github.com/ros-planning/navigation/blob/kinetic-devel/nav_core/package.xml -->
<package format="2">
  <name>hubero_interfaces</name>
  <version>0.7.0</version>
  <description>The hubero_interfaces package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hubero_common</build_depend>
  <exec_depend>hubero_common</exec_depend>

</package>
