<?xml version="1.0"?>
<package format="2">
  <name>hubero_ros</name>
  <version>0.5.0</version>
  <description>The hubero_ros package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>hubero_interfaces</build_depend>
  <build_depend>hubero_common</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>hubero_interfaces</build_export_depend>
  <build_export_depend>hubero_common</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>hubero_interfaces</exec_depend>
  <exec_depend>hubero_common</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <hubero_interfaces plugin="${prefix}/nav_plugin.xml" />
  </export>
</package>
