<?xml version="1.0"?>
<package format="2">
  <name>hubero_ros_scenarios</name>
  <version>0.5.0</version>
  <description>The hubero_ros_scenarios package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hubero_ros_scenarios</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hubero_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hubero_ros</exec_depend>

</package>
