<?xml version="1.0"?>
<package format="2">
  <name>hubero_ros_scenarios</name>
  <version>0.7.0</version>
  <description>The hubero_ros_scenarios package</description>

  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/hubero</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hubero_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hubero_ros</exec_depend>

</package>
